fixup: use assertThrows in test and fix expected error message